tests/fixtures/valid_programs/pointers.cryo
namespace Main;

import IO from <io/stdio>;
import <core/types>;

// Pointer and reference operations
function test_pointers() -> void {
    mut x: int = 10;
    mut ptr_x: &int = &x;
    const value: int = *ptr_x;
    *ptr_x = 20;
    return;
}

function test_references() -> void {
    mut y: int = 30;
    mut ref_y: &int = &y;
    const value: int = *ref_y;
    return;
}

function main() -> int {
    test_pointers();
    test_references();
    return 0;
}