tests/fixtures/invalid_programs/null_pointer_dereference.cryo
namespace Main;

// This should fail: Dereferencing null pointer
function test_null_pointer_dereference() -> int {
    mut null_ptr: int* = null;
    const value: int = *null_ptr;  // Should cause compilation error or runtime error
    return value;
}